--- a/BK_Details_App/Views/DetailsView.axaml
+++ b/BK_Details_App/Views/DetailsView.axaml
@@ -12,10 +12,10 @@
 		<Border Grid.Row="2" BorderThickness="3" BorderBrush="Red"></Border>
 
 		<!--Верхняя панель с лого и кнопками-->
-		<Grid Grid.Row="0" ColumnDefinitions="60*, 25*, 25*">
+		<Grid Grid.Row="0" ColumnDefinitions="65*, 18*, 18*">
 			<Image Grid.Column="0" HorizontalAlignment="Left" Margin="10" Source="/Assets/logobk.png"></Image>
-			<Button Grid.Column="1" Margin="10">Выбрать файл для сравнения</Button>
-			<Button Grid.Column="2" Margin="10">Выгрузить результат в Excel</Button>
+			<Button Classes="ChooseUploadFile" Grid.Column="1" Margin="10">Выбрать файл для сравнения</Button>
+			<Button Classes="ChooseUploadFile" Grid.Column="2" Margin="10">Выгрузить результат в Excel</Button>
 		</Grid>
 		
 		<!--Поиск, сортировка и фильтрация-->
