--- a/BK_Details_App/Styles.axaml
+++ b/BK_Details_App/Styles.axaml
@@ -16,6 +16,8 @@
 	<Style Selector="Button.ChooseUploadFile">
 		<Setter Property="Background" Value="#5F69B1"></Setter>
 		<Setter Property="Foreground" Value="White"></Setter>
+		<Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+		<Setter Property="VerticalContentAlignment" Value="Center"></Setter>
 	</Style>
 
 	<Style Selector="Button.ChooseUploadFile:pointerover /template/ ContentPresenter">
@@ -31,8 +33,11 @@
 
 	<Style Selector="TextBlock.HeadPage">
 		<Setter Property="FontSize" Value="24"></Setter>
-		<Setter Property="Margin" Value="0 10 0 0"></Setter>
+		<Setter Property="HorizontalAlignment" Value="Stretch"></Setter>
+		<Setter Property="VerticalAlignment" Value="Stretch"></Setter>
 		<Setter Property="FontWeight" Value="Medium"></Setter>
+		<Setter Property="Height" Value="30"></Setter>
+		<Setter Property="Margin" Value="10"></Setter>
 	</Style>
 
 	<Style Selector="TextBox.Search">
@@ -58,8 +63,7 @@
 		<Setter Property="BorderThickness" Value="3"></Setter>
 		<Setter Property="FontSize" Value="15"></Setter>
 		<Setter Property="Height" Value="35"></Setter>
-		<Setter Property="Margin" Value="10"></Setter>
-		<Setter Property="Width" Value="600"></Setter>
+		<Setter Property="Margin" Value="10"></Setter>		
 		<Setter Property="PlaceholderText" Value="Группы материалов"></Setter>
 	</Style>
 
