--- a/BK_Details_App/Views/DetailsView.axaml
+++ b/BK_Details_App/Views/DetailsView.axaml
@@ -7,34 +7,55 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="BK_Details_App.DetailsView"
 			 x:DataType="vm:DetailsVM">
-	<Grid RowDefinitions="7*, 15*, 78*">
+	<Grid RowDefinitions="7*, Auto, 78*">
 		<Border Grid.Row="0" BorderThickness="3" BorderBrush="LightSteelBlue"></Border>
 		<Border Grid.Row="1" BorderThickness="3" BorderBrush="LawnGreen"></Border>
 		<Border Grid.Row="2" BorderThickness="3" BorderBrush="Red"></Border>
 
 		<!--Верхняя панель с лого и кнопками-->
-		<Grid Grid.Row="0" ColumnDefinitions="20*, 49*, 18*, 18*">
+		<Grid Grid.Row="0" ColumnDefinitions="20*, 52*, Auto, Auto">
 			<Image Grid.Column="0" HorizontalAlignment="Left" Margin="10" Source="/Assets/logobk.png"></Image>
 			<TextBlock Classes="HeadPage" Grid.Column="1">Просмотр материалов</TextBlock>
-			<Button Classes="ChooseUploadFile" Grid.Column="2" Margin="10">Выбрать файл для сравнения</Button>
-			<Button Classes="ChooseUploadFile" Grid.Column="3" Margin="10">Выгрузить результат в Excel</Button>
+			<Button Classes="ChooseUploadFile" Grid.Column="2" Margin="0 10 10 10" HorizontalAlignment="Right">Выбрать файл для сравнения</Button>
+			<Button Classes="ChooseUploadFile" Grid.Column="3" Margin="0 10 10 10" HorizontalAlignment="Right">Выгрузить результат в Excel</Button>
 		</Grid>
 		
-		<!--Поиск, сортировка и фильтрация-->
+		<!--Поиск, сортировка и фильтрация--><!--
 		<Grid Grid.Row="1" RowDefinitions="50*, 50*" ColumnDefinitions="50*, 50*">
-			<!--Левая часть-->
+			--><!--Левая часть--><!--
 			<TextBox Classes="Search" Grid.Row="0" Grid.Column="0"></TextBox>
 			<StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal">
 				<ComboBox Classes="Choice" PlaceholderText="Сортировка"></ComboBox>
 				<ComboBox Classes="Choice" PlaceholderText="Фильтрация"></ComboBox>
 			</StackPanel>
 			
-			<!--Правая часть-->
+			--><!--Правая часть--><!--
 			<TextBox Classes="Search" Grid.Row="0" Grid.Column="1" ></TextBox>
 			<StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
 				<ComboBox Classes="Choice" PlaceholderText="Сортировка"></ComboBox>
 				<ComboBox Classes="Choice" PlaceholderText="Фильтрация"></ComboBox>
 			</StackPanel>
+		</Grid>-->
+
+		<!--Поиск, сортировка и фильтрация-->
+		<Grid Grid.Row="1" ColumnDefinitions="50*, 50*">
+			<!--Левая часть-->
+			<Grid Grid.Column="0" ColumnDefinitions="1.5*, 3*">
+			<TextBox Classes="Search" Grid.Column="0" HorizontalAlignment="Stretch" TextWrapping="WrapWithOverflow" ></TextBox>
+			<StackPanel Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
+				<ComboBox Classes="Choice" PlaceholderText="Сортировка"></ComboBox>
+				<ComboBox Classes="Choice" PlaceholderText="Фильтрация"></ComboBox>
+			</StackPanel>
+			</Grid>
+
+			<!--Правая часть-->
+			<Grid Grid.Column="1" ColumnDefinitions="1.5*, 3*">
+				<TextBox Classes="Search" Grid.Column="0" HorizontalAlignment="Stretch" TextWrapping="WrapWithOverflow"></TextBox>
+				<StackPanel Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
+					<ComboBox Classes="Choice" PlaceholderText="Сортировка"></ComboBox>
+					<ComboBox Classes="Choice" PlaceholderText="Фильтрация"></ComboBox>
+				</StackPanel>
+			</Grid>
 		</Grid>
 		
 		<!--Панель с файлами-->
@@ -78,13 +99,13 @@
 						</Grid>
 					</ListBox.Items>
 				</ListBox>
-				<Button Classes="ChooseUploadFile" Grid.Row="1">Добавить ПЭЗ</Button>
+				<Button Classes="ChooseUploadFile" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1">Добавить ПЭЗ</Button>
 			</Grid>
 			
 			<!--Правая часть-->
 			<Grid Grid.Column="1" RowDefinitions="Auto, 93*">
 				<Grid Grid.Row="0" ColumnDefinitions="86*, 7*, 7*">
-					<ComboBox Classes="ChoiceGroup" Grid.Column="0"></ComboBox>
+					<ComboBox Classes="ChoiceGroup" Grid.Column="0" HorizontalAlignment="Stretch"></ComboBox>
 					<Image Classes="FavoritesButton" Grid.Column="1" Source="avares://BK_Details_App/Assets/heart-add.png"></Image>
 					<Image Classes="FavoritesButton" Grid.Column="2" Source="avares://BK_Details_App/Assets/heart-search.png"></Image>
 				</Grid>
